// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Base renders correctly 1`] = `
<Base
  history={
    Object {
      "push": [Function],
    }
  }
  menuData={
    Array [
      Object {
        "title": "Overview",
        "type": "link",
        "url": "/",
      },
      Object {
        "items": Array [
          Object {
            "title": "Dashboard",
            "type": "link",
            "url": "/dashboard",
          },
          Object {
            "title": "List",
            "type": "link",
            "url": "/list",
          },
          Object {
            "title": "Form",
            "type": "link",
            "url": "/form",
          },
          Object {
            "title": "Menu",
            "type": "link",
            "url": "/menu",
          },
          Object {
            "title": "Dialog",
            "type": "link",
            "url": "/dialog",
          },
        ],
        "title": "Components",
        "type": "label",
      },
      Object {
        "isDisabled": true,
        "title": "Disabled Link",
        "type": "link",
        "url": "/portfolio",
      },
      Object {
        "type": "divider",
      },
      Object {
        "icon": <Memo(BugReportIcon) />,
        "title": "Report a bug",
        "type": "link",
        "url": "/bug",
      },
    ]
  }
  menuOpen={true}
  title="Foo"
>
  <div>
    Foo
  </div>
</Base>
`;

exports[`Base renders correctly without header 1`] = `
<Base
  hasHeader={false}
  history={
    Object {
      "push": [Function],
    }
  }
  menuData={
    Array [
      Object {
        "title": "Overview",
        "type": "link",
        "url": "/",
      },
      Object {
        "items": Array [
          Object {
            "title": "Dashboard",
            "type": "link",
            "url": "/dashboard",
          },
          Object {
            "title": "List",
            "type": "link",
            "url": "/list",
          },
          Object {
            "title": "Form",
            "type": "link",
            "url": "/form",
          },
          Object {
            "title": "Menu",
            "type": "link",
            "url": "/menu",
          },
          Object {
            "title": "Dialog",
            "type": "link",
            "url": "/dialog",
          },
        ],
        "title": "Components",
        "type": "label",
      },
      Object {
        "isDisabled": true,
        "title": "Disabled Link",
        "type": "link",
        "url": "/portfolio",
      },
      Object {
        "type": "divider",
      },
      Object {
        "icon": <Memo(BugReportIcon) />,
        "title": "Report a bug",
        "type": "link",
        "url": "/bug",
      },
    ]
  }
  menuOpen={true}
  title="Foo"
>
  <div>
    Foo
  </div>
</Base>
`;

exports[`Base renders with drawer open 1`] = `
<Base
  hasHeader={false}
  history={
    Object {
      "push": [Function],
    }
  }
  menuData={
    Array [
      Object {
        "title": "Overview",
        "type": "link",
        "url": "/",
      },
      Object {
        "items": Array [
          Object {
            "title": "Dashboard",
            "type": "link",
            "url": "/dashboard",
          },
          Object {
            "title": "List",
            "type": "link",
            "url": "/list",
          },
          Object {
            "title": "Form",
            "type": "link",
            "url": "/form",
          },
          Object {
            "title": "Menu",
            "type": "link",
            "url": "/menu",
          },
          Object {
            "title": "Dialog",
            "type": "link",
            "url": "/dialog",
          },
        ],
        "title": "Components",
        "type": "label",
      },
      Object {
        "isDisabled": true,
        "title": "Disabled Link",
        "type": "link",
        "url": "/portfolio",
      },
      Object {
        "type": "divider",
      },
      Object {
        "icon": <Memo(BugReportIcon) />,
        "title": "Report a bug",
        "type": "link",
        "url": "/bug",
      },
    ]
  }
  menuOpen={true}
  title="Foo"
>
  <div>
    Foo
  </div>
</Base>
`;
